@@ -39,17 +39,25 @@ AC_SUBST(DESKTOP_FILE_UTILS_REQUIRED)
 
 dnl D-BUS
 dnl ==========================
-AC_ARG_ENABLE(dbus, [  --enable-dbus=[no/yes]    compile with d-bus support.],,enable_dbus=no)
+AC_ARG_ENABLE(dbus, [  --enable-dbus=[no/yes/auto]    compile with d-bus support.],,enable_dbus=auto)
 
-if test "x$enable_dbus" = "xyes"; then
-   dbus_pkgconfig="dbus-glib-1 >= 0.20"
+if test "x$enable_dbus" != "xno"; then
+   dbus_pkgconfig="dbus-1 >= 0.20 dbus-glib-1"
    PKG_CHECK_MODULES(DBUS, $dbus_pkgconfig, have_dbus=yes, have_dbus=no)
    if test x$have_dbus = xyes; then
       AC_DEFINE(HAVE_DBUS, 1, d-bus support)
-  fi
+   fi
 else
    have_dbus=no
    dbus_pkgconfig=
+fi
+
+if test "x$have_dbus" != "xyes"; then
+  if test "x$enable_dbus" = "xyes"; then
+      AC_MSG_ERROR([Couldn't find d-bus.])
+  else
+   dbus_pkgconfig=
+  fi
 fi
 
 AM_CONDITIONAL(HAVE_DBUS, test x$have_dbus = xyes)
@@ -60,13 +68,13 @@ dnl ================================
 
 PKG_CHECK_MODULES(DRWRIGHT,
 [
-	$dbus_pkgconfig
 	glib-2.0 >= $GLIB_REQUIRED
 	gobject-2.0
 	gtk+-2.0 >= $GTK_REQUIRED
 	gconf-2.0 >= $GCONF_REQUIRED
 	libglade-2.0 >= $LIBGLADE_REQUIRED 
-	libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED
+	libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED 	
+	$dbus_pkgconfig
 ])
 
 AC_SUBST(DRWRIGHT_CFLAGS)
