@@ -1,3 +1,12 @@
+2004-02-02  Richard Hult  <richard@imendio.com>
+
+	* configure.in: Add auto option for dbus and default to that.
+
+	* src/drw-break-window.c (drw_break_window_init): Add mnemonic to
+	postpone button.
+
+	* src/drwright.c: Grab the keyboard to make the mnemonic work.
+
 2004-02-01  Robert Sedak  <robert.sedak@sk.htnet.hr>
 
         * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.
